# vibe-transcriber

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  build.sh  pyproject.toml
transcriber/: audio_utils.py  lrc_writer.py  main.py  whisper_utils.py
